BFAST -- History of visible changes.

See LICENSE for details
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.6.2
* Fixing a bug that did not properly save all constraints. This
reduced performance.
* Fixed behaviour differences between when the index(es) are
split and when they are one piece.
* solid2fastq (C-version) now can read in bzip2 compressed
files using the "-j" option.

Version 0.6.1
* fixing bugs related to the reorganization of the code.

Version 0.6.0
* complete re-organization of the bfast code and commands
* supports automatic splitting of the indexes to allow efficient
low-memory execution (>4GB for the human genome).
* bfast reference and index file names are now based off of the 
input reference FASTA file.
* the match, localalign, and postprocess command support the
pipe-and-filter model (stdin and stdout).
* local alignment now supports a seed-constrained version, which
uses information from the lookups to constrain the local 
alignment.  This adds a speed improvement as well as accuracy 
improvement.

Version 0.5.7
* bfast.submit.pl supports the -s and -e options in BFAST.

Version 0.5.6
* balign now is able to only align a specific subset of reads from the 
matches file.  This is similar to bmatches and should be especially 
useful if the index search (bmatches) is faster than the local
alignment (balign), which is usually the case for ABI SOLiD data.
* Both the secondary indexes list and offsets files are now optional in
bmatches.
* Added bfast.submit.pl PERL script for scheduling alignment jobs on SGE
and PBS clusters.

Version 0.5.5
* Adding support for input queueing, so that a given number of reads are 
loaded into memory then analyzed instead of one-by-one.

Version 0.5.4
* Bug in the SAM header and setting the unpaired reads incorrectly.
* SAM output will now skip triple/quad/... end reads instead of quitting.
* Adding support for all alignments to be carried forward. This is so